force-app/main/default/objects/cgcloud__Visit_Job__c/cgcloud__Visit_Job__c.object-meta.xml
<CustomObject>
    <description>Contains answered questions and product surveys (jobs).</description>
    <label>Visit Job</label>
    <nameField>
        <displayFormat>CJ-{0000}</displayFormat>
        <label>Visit Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>