force-app/main/default/objects/cgcloud__Visit_Job__c/fields/cgcloud__Data_Type_Option__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Data_Type_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Data Type Option</label>
    <referenceTo>cgcloud__Data_Type_Option__c</referenceTo>
    <relationshipLabel>Visit Jobs</relationshipLabel>
    <relationshipName>Call_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>