force-app/main/default/objects/cgcloud__Visit_Job__c/fields/cgcloud__Display_Value__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Display_Value__c</fullName>
    <formula>IF(ISPICKVAL(cgcloud__Job_Definition_Template__r.cgcloud__Data_Type__r.cgcloud__Data_Type__c, &quot;Toggle&quot;) ,   cgcloud__Data_Type_Option__r.cgcloud__Description__c   ,  cgcloud__Value__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Answer</label>
    <type>Text</type>
</CustomField>