force-app/main/default/objects/cgcloud__Visit_Job__c/fields/cgcloud__Done__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Done</label>
    <type>Checkbox</type>
</CustomField>