force-app/main/default/objects/cgcloud__Visit_Job__c/fields/cgcloud__Job_Definition__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Job_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Definition</label>
    <referenceTo>cgcloud__Job_DL_Job_Definition_Template__c</referenceTo>
    <relationshipLabel>Visit Jobs</relationshipLabel>
    <relationshipName>Call_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>