force-app/main/default/objects/cgcloud__Visit_Job__c/fields/cgcloud__Job_Definition_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Job_Definition_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Definition Template</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>((1 AND 2) OR (3 AND 4))</booleanFilter>
        <filterItems>
            <field>$Source.cgcloud__Product__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>cgcloud__Job_Definition_Template__c.cgcloud__Job_Template__r.cgcloud__Product_Reference__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>$Source.cgcloud__Product__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>cgcloud__Job_Definition_Template__c.cgcloud__Job_Template__r.cgcloud__Product_Reference__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Job_Definition_Template__c</referenceTo>
    <relationshipLabel>Visit Jobs</relationshipLabel>
    <relationshipName>Call_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>