force-app/main/default/objects/cgcloud__Visit_Job__c/fields/cgcloud__Job_Definition_Template_Description__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Job_Definition_Template_Description__c</fullName>
    <formula>cgcloud__Job_Definition_Template__r.cgcloud__Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question</label>
    <type>Text</type>
</CustomField>