force-app/main/default/objects/cgcloud__Visit_Job__c/fields/cgcloud__Last_Value__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Last_Value__c</fullName>
    <label>Last Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>