force-app/main/default/objects/cgcloud__Visit_Job__c/fields/cgcloud__Manually__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Manually__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manually</label>
    <type>Checkbox</type>
</CustomField>