force-app/main/default/objects/cgcloud__Visit_Job__c/fields/cgcloud__Number_of_Pictures__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Number_of_Pictures__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Pictures</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>