force-app/main/default/objects/cgcloud__Visit_Job__c/fields/cgcloud__POS__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__POS__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Reference to POS.</description>
    <label>POS</label>
    <referenceTo>cgcloud__POS__c</referenceTo>
    <relationshipLabel>Visit Jobs</relationshipLabel>
    <relationshipName>Call_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>