force-app/main/default/objects/cgcloud__Visit_Job__c/fields/cgcloud__Product__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Product2.cgcloud__Product_Template__r.RecordTypeId</field>
            <operation>equals</operation>
            <value>Product</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Visit Jobs</relationshipLabel>
    <relationshipName>Call_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>