force-app/main/default/objects/cgcloud__Visit_Job__c/fields/cgcloud__Target_Value__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Target_Value__c</fullName>
    <description>Only for Mobility, stores Target Values to Job</description>
    <label>Target Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>