force-app/main/default/objects/cgcloud__Visit_Job__c/fields/cgcloud__Visit__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Visit__c</fullName>
    <label>Visit</label>
    <referenceTo>Visit</referenceTo>
    <relationshipLabel>Visit Jobs</relationshipLabel>
    <relationshipName>Call_Jobs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>