force-app/main/default/objects/cgcloud__Visit_Job__c/fields/cgcloud__Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Visit_Date__c</fullName>
    <label>Visit Date</label>
    <type>Date</type>
</CustomField>