force-app/main/default/objects/cgcloud__Visit_Job__c/validationRules/cgcloud__Check_Product_Template_RecordType.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_Product_Template_RecordType</fullName>
    <active>true</active>
    <description>Allow only products with Product Template record type &quot;Product&quot;.</description>
    <errorConditionFormula>NOT(ISBLANK( cgcloud__Product__c )) &amp;&amp;
cgcloud__Product__r.cgcloud__Product_Template__r.RecordType.DeveloperName &lt;&gt; &apos;Product&apos;</errorConditionFormula>
    <errorMessage>Only products with Product Template record type &quot;Product&quot; allowed.</errorMessage>
</ValidationRule>